0.7.0-RC1 (2013/?/?)
------------------

+ Fixed: Local launches could generate zombie processes
+ Added: map_as_completed() in the futures API interface
+ Added: Benchmark utilities
+ Improved: Documentation
+ Improved: mapReduce() now won't communicate intermediary results
+ Improved: Future results are now sent back directly to the worker awaiting for it
+ Improved: Various socket optimizations

0.6.2 (2013/07/02)
------------------

+ Fixed: Process cleanup on csh/tsh shell variants
+ Fixed: Using partials could crash - switched identifying a Future callable from __name__ to its hash()

0.6.1 (2013/03/04)
------------------

+ Fixed: Support for Python 2.6
+ Fixed: Logging configuration contamination
+ Added: Preliminary support for Object-Oriented paradigm (Parallel method executions)
+ Added: Support for lambda execution
+ Added: Pool discovery features
+ Improved: A Future can now return None

0.6.0 (2013/01/21)
------------------

+ Improved: Launching submodule
+ Improved: Network handling
+ Improved: Debugging output
+ Improved: Documentation and examples
+ Changed: Default verbosity is now level 1
+ Added: --quiet flag
+ Added: Nicing levels for local workers

Special thanks to:
+ Stijn De Weirdt <stijn.deweirdt <at> gmail.com>

0.6.0-RC2 (2012/12/28)
----------------------

+ Added: Shared constants and functions
+ Added: Examples for newly available features
+ Added: Support for interactive sessions

0.6.0-RC1 (2012/11/22)
----------------------

+ Fixed: Backported modules conflicting with Python 3 installation
+ Fixed: Memory leak in the Futures queues
+ Improved: Time-based future buffer (instead of count-based)
+ Improved: Cleaning remote workers after termination
+ Added: Remote broker launching
+ Added: mapReduce and mapScan functions


0.5.3 (2012/08/24)
------------------

+ Improved worker ouput to standard output
+ Fixed: Launching distribution shown in verbose mode
+ Fixed: Python 2.6 launching issue